k8s/backendsvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vcluster-backend
spec:
  selector:
    app: vcluster-backend
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
