k8s/svcfrontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: vcluster-frontend
spec:
  selector:
    app: vcluster-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
